2007-05-24  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua-dbutil.scm
	  Add support for -S and -c command line options.
	  It make kahua-dbutil can run in source tree (w/o install).

	* Fix: src/kahua/persistence.scm, src/kahua/persistence/dbi.scm,
	       src/kahua/persistence/mysql.scm, src/kahua/persistence/postgresql.scm
	  kahua-dbutil was broken against Kahua 0.7 or prior version
	  database on MySQL or PostgreSQL.

2007-05-18  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua-server.scm
	  Unsafe implementation of kahua-write-static-file.

2007-05-03  Katsutoshi Itoh <cut-sea@kahua.org>

	* Fix: src/kahua/persistence/efs.scm
	  When class redefined, index cache confusion occured.
	  Check to syncronize between index-cache and persistence
	  at kahua-instances-by-index.
	  For this purpose, import read-index-cache & register-index-cache
	  from persistence.scm with little bit change.
	  In future, Maybe we export cache APIs from kahua.persistence.
	
2007-04-30  Tatsuya BIZENN  <bizenn@arthub.net>

	* Add: src/kahua/thread-pool.scm
	  New function thread-pool-inc! and thread-pool-dec!, and
	  change method add, wait-all and finish-all into function
	  thread-pool-add, thread-pool-wait-all and thread-pool-finish-all
	  respectively.

2007-04-28  Tatsuya BIZENN  <bizenn@arthub.net>

	* Add: src/kahua/config.scm.in
	  Add kahua-datapath utility.

2007-04-27  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/config.scm.in
	  Add "data" configuration slot. it has file strage directory
	  path.  The directory is placed in working directory.

2007-04-26  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/elem.scm, src/kahua/server.scm
	  Fix wrong format of entity reference node(&, &:, &/).

	* Change: src/kahua/server.scm
	  Integrate a and a/cont, form and form/cont, frame and frame/cont.
	  Change define-element syntax and add backward compatibility.

2007-04-24  Tatsuya BIZENN  <bizenn@arthub.net>

	* Add: check.scm