@@ -1,9 +1,0 @@
-;;-*- coding: utf-8; mode: kahua -*-
-;; %%_PROJECT_NAME_%% version
-;;
-;;  See COPYING for terms and conditions of using this software
-;;
-;; $Id:$
-
-;;---------------------------------------------------------
-(define *%%_PROJECT_NAME_%%-version* "##PROJECT_VERSION##")
