@@ -17,8 +17,8 @@
 (define *PLUGINS* '(##PLUGINS##))
 (define *config* "test.conf")
 
-(sys-system "rm -rf _tmp _work %%_PROJECT_NAME_%%")
-(sys-mkdir "%%_PROJECT_NAME_%%" #o755)
+(sys-system "rm -rf _tmp _work src")
+(sys-mkdir "src" #o755)
 (sys-mkdir "_tmp" #o755)
 (sys-mkdir "_work" #o755)
 (sys-mkdir "_work/plugins" #o755)
@@ -40,7 +40,7 @@
 
 (with-worker
  (w `(,GOSH "-I.." "-I##KAHUA_LIB##" "kahua-server.scm" "-c" ,*config*
-            "../%%_PROJECT_NAME_%%/%%_PROJECT_NAME_%%.kahua"))
+            "../src/%%_PROJECT_NAME_%%.kahua"))
 
  (test* "run %%_PROJECT_NAME_%%.kahua" #t (worker-running? w))
 
